# Lumina

./: .gitignore  CMakeLists.txt  Doxyfile.in  TehnicalSpecification.md  TehnicalSpecification.md.old  config.json  script
docs/: .~lock.Кроки.odt#  .~lock.ТЗ.odt#  UseCase.puml  UseCaseDiagram.puml  bd.puml  bd.uml  database.puml  Кроки.odt  ТЗ.odt  ТЗ_.odt
docs/Sequence Diagrams/: RegistrationAndEmailVerification.puml  auth.puml  restorePassword.puml
docs/api/: openapi: '3.0.yml
scripts/: addClient.sh  group.sh  initServer.sh  initServerPart.sh  installEasyRsa.sh  lib.sh  lumina.vars  removeServer.sh  revokeClient.sh  runOpenVPNServer.sh
src/: VpnServer.hpp
src/client/: AboutDialog.cpp  AboutDialog.hpp  AuthWindow.cpp  AuthWindow.hpp  CMakeLists.txt  CommandRunner.cpp  CommandRunner.hpp  GroupMemberWidget.cpp  GroupMemberWidget.hpp  GroupWidget.cpp  GroupWidget.hpp  LuminaMainWindow.cpp  LuminaMainWindow.hpp  LuminaTlsClient.cpp  LuminaTlsClient.hpp  MessageDispatcher.cpp  MessageDispatcher.hpp  Pinger.cpp  Pinger.hpp  RegWindow.hpp  RestoreDialog.cpp  RestoreDialog.hpp  main_client.cpp
src/client/resources/: resources.qrc
src/common/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  CryptoUtils.cpp  CryptoUtils.hpp  ValidationUtils.cpp  ValidationUtils.hpp
src/server/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  DatabaseManager.cpp  DatabaseManager.hpp  LuminaTlsServer.cpp  LuminaTlsServer.hpp  TlsSession.cpp  TlsSession.hpp  VpnServer.cpp  VpnServer.hpp  main_server.cpp
src/server/sql/: create_DB.sql
